[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/opportunities.gd" type="Script" id=1]

[node name="opportunities" type="HBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeaveAction" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="LeaveAction"]
color = Color( 0.803922, 0.0862745, 0.0862745, 1 )
antialiased = true
polygon = PoolVector2Array( 4.11863, 27.5587, 11.2017, 18.9731, 11.631, 26.9148, 23.2215, 27.1295, 22.5776, 37.2175, 11.631, 35.5004, 11.2017, 43.2274 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="LeaveAction"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 32.6656, 43.6566, 40.3926, 33.3539, 46.1878, 43.2274, 50.4806, 40.0078, 41.8951, 30.1344, 42.1097, 24.5538, 49.1928, 30.7783, 51.3392, 27.5587, 41.6804, 18.9731, 41.4658, 15.9682, 46.1878, 14.0364, 46.8317, 8.88513, 42.7536, 5.23627, 36.0998, 5.23627, 34.3827, 8.24121, 34.5973, 11.8901, 33.7388, 13.8218, 37.8169, 14.4658, 37.8169, 17.9, 28.8021, 22.8367, 30.5192, 25.8416, 36.3144, 22.8367, 36.7437, 29.2758, 29.446, 40.0078 )
__meta__ = {
"_edit_lock_": true
}

[node name="Talk" type="ColorRect" parent="."]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Talk"]
position = Vector2( 21.0843, 16.6603 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 20.5273, -5.99506, 21.5279, 18.6606, 21.5301, 30.3548, 19.3992, 25.6544, 16.579, 22.6461, 13.508, 20.39, 10.6887, 18.8215, -6.29638, 19.0738, -5.92035, -6.24573 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="Talk"]
position = Vector2( 21.0843, 16.6603 )
polygon = PoolVector2Array( 19.9633, -5.61902, 20.966, 18.6978, 21.342, 29.7908, 19.7752, 25.4037, 16.955, 22.5208, 13.9467, 20.1392, 10.7504, 18.3844, -5.79501, 18.6978, -5.48165, -5.6817 )
__meta__ = {
"_edit_lock_": true
}

[node name="GrabFromBack" type="ColorRect" parent="."]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="GrabFromBack"]
position = Vector2( 23.8781, 0.250671 )
color = Color( 0.0745098, 0.211765, 0.831373, 1 )
polygon = PoolVector2Array( 5.7624, 17.998, 8.26929, 15.4911, 12.9697, 14.6764, 15.6019, 16.8073, 16.542, 21.5076, 11.7163, 23.1371, 11.5282, 26.3334, 15.2886, 27.3989, 15.0379, 24.5159, 15.4766, 22.7611, 15.978, 24.2026, 16.9807, 22.1344, 17.1061, 24.0145, 19.1742, 22.6984, 17.8581, 24.7666, 16.9807, 25.9574, 17.1061, 30.5952, 13.4711, 28.5896, 18.2342, 36.8623, 29.2018, 51.4023, 22.5585, 52.7811, 13.8471, 41.5627, 8.33196, 53.9092, 1.68871, 52.8438, 8.64532, 39.4319, 9.46007, 34.1674, 8.70799, 27.5242, 8.95868, 23.1371, 6.26377, 20.4423 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="GrabFromBack"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 14.7245, 17.6846, 17.9208, 15.0524, 23.5613, 15.0524, 25.1908, 17.6219, 23.8747, 21.7583, 21.1171, 21.9464, 21.1171, 26.1454, 30.8313, 24.9546, 31.9594, 23.3878, 36.8478, 22.5104, 33.7769, 24.7666, 37.5372, 24.892, 34.3409, 26.4587, 37.8506, 27.2108, 23.812, 29.1536, 18.2342, 36.8623, 29.2018, 51.4023, 22.5585, 52.7811, 13.8471, 41.5627, 8.33196, 53.9092, 1.68871, 52.8438, 8.64532, 39.4319, 9.46007, 34.1674, 15.2886, 26.8348, 16.73, 22.2597, 14.9125, 19.0007 )
__meta__ = {
"_edit_lock_": true
}

[node name="KickToBed" type="ColorRect" parent="."]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="KickToBed"]
color = Color( 0.384314, 0.121569, 0.560784, 1 )
polygon = PoolVector2Array( 33.5529, 43.224, 33.6882, 48.7703, 59.5259, 48.9056, 59.2554, 42.0065 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="KickToBed"]
position = Vector2( 1.89386, 2.43494 )
color = Color( 0.447059, 0.12549, 0.592157, 1 )
polygon = PoolVector2Array( 46.1336, 38.7599, 48.5686, 37.1366, 55.3324, 36.5955, 58.4437, 38.0836, 55.7382, 39.301, 49.1097, 40.1127 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D3" type="Polygon2D" parent="KickToBed"]
position = Vector2( 0.18895, 1.32251 )
color = Color( 0.196078, 0.258824, 0.670588, 1 )
polygon = PoolVector2Array( 26.2192, 45.3156, 33.2824, 39.4363, 44.1044, 39.301, 45.1867, 36.4602, 48.9744, 36.1897, 50.0566, 38.3541, 48.4333, 41.6007, 45.863, 42.0065, 44.5103, 40.6538, 33.9588, 42.0065, 28.0066, 46.8765, 25.2262, 46.5016 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D4" type="Polygon2D" parent="KickToBed"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 19.8648, 47.0496, 23.3602, 40.5312, 32.5236, 40.4368, 32.2402, 35.4299, 30.1619, 38.1696, 23.738, 37.8861, 20.8095, 32.6904, 27.8002, 29.0061, 25.0606, 27.4946, 19.5814, 29.7618, 19.0146, 27.8725, 19.1091, 25.4163, 15.8972, 24.755, 12.6852, 25.8887, 13.0631, 27.778, 15.7082, 28.7227, 16.7474, 29.8563, 20.4316, 38.1696, 19.1091, 43.2708, 15.7082, 46.9551, 18.4478, 48.561 )
__meta__ = {
"_edit_lock_": true
}

[node name="FrontGrab" type="ColorRect" parent="."]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="FrontGrab"]
color = Color( 0, 0.235294, 0.678431, 1 )
polygon = PoolVector2Array( 11.276, 42.7036, 16.9576, 39.8628, 22.7744, 41.4861, 28.7266, 40.6744, 27.9149, 37.1573, 29.403, 36.7515, 32.1085, 40.8098, 34.1376, 40.8098, 33.4612, 37.8337, 36.9784, 37.2925, 40.9014, 38.6453, 40.9014, 42.8389, 34.6787, 43.1094, 31.4321, 41.892, 23.1802, 43.7858, 17.3634, 41.6214, 12.0876, 44.5975 )

[node name="Polygon2D" type="Polygon2D" parent="FrontGrab"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 14.9284, 34.8576, 19.6631, 29.176, 20.0689, 24.4413, 26.2916, 19.0303, 29.9441, 24.4413, 28.8618, 29.3113, 26.4269, 30.6641, 22.3686, 28.6349, 21.8275, 31.0699, 28.1855, 36.2103, 26.6974, 37.4279, 20.3395, 33.5048, 17.6339, 36.8867, 22.0981, 43.9211, 9.11157, 44.868, 9.38211, 41.7567, 16.687, 41.3508 )
__meta__ = {
"_edit_lock_": true
}

[node name="FrontGrabFaceSlap" type="ColorRect" parent="."]
margin_left = 340.0
margin_right = 404.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="FrontGrabFaceSlap"]
color = Color( 0, 0.235294, 0.678431, 1 )
polygon = PoolVector2Array( 11.276, 42.7036, 16.9576, 39.8628, 22.7744, 41.4861, 28.7266, 40.6744, 27.9149, 37.1573, 29.403, 36.7515, 32.1085, 40.8098, 34.1376, 40.8098, 33.4612, 37.8337, 36.9784, 37.2925, 40.9014, 38.6453, 40.9014, 42.8389, 34.6787, 43.1094, 31.4321, 41.892, 23.1802, 43.7858, 17.3634, 41.6214, 12.0876, 44.5975 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="FrontGrabFaceSlap"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 14.9284, 34.8576, 19.6631, 29.176, 20.0689, 24.4413, 26.2916, 19.0303, 29.9441, 24.4413, 28.8618, 29.3113, 26.4269, 30.6641, 22.3686, 28.6349, 21.8275, 31.0699, 28.1855, 36.2103, 26.6974, 37.4279, 20.3395, 33.5048, 17.6339, 36.8867, 22.0981, 43.9211, 9.11157, 44.868, 9.38211, 41.7567, 16.687, 41.3508 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D3" type="Polygon2D" parent="FrontGrabFaceSlap"]
position = Vector2( 3.78772, 1.89386 )
color = Color( 0.662745, 0.133333, 0.133333, 1 )
polygon = PoolVector2Array( 32.8288, 29.4469, 30.9349, 33.3699, 28.4999, 34.7227, 22.2772, 35.5343, 22.8184, 36.2107, 30.9349, 36.2107, 33.6404, 33.7758, 35.1284, 30.7997 )
__meta__ = {
"_edit_lock_": true
}

[node name="PickUpItem" type="ColorRect" parent="."]
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="PickUpItem"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 10.5048, 29.8715, 19.6631, 29.176, 22.9023, 25.9973, 28.9074, 22.8979, 32.7816, 29.4841, 29.876, 31.2275, 27.5514, 32.5834, 23.6772, 31.4212, 21.8275, 31.0699, 28.1855, 36.2103, 26.6974, 37.4279, 20.3395, 33.5048, 14.9602, 32.5834, 15.5413, 38.5885, 16.7036, 48.0804, 13.7979, 48.0804, 12.4419, 38.976 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="PickUpItem"]
color = Color( 0.886275, 0.564706, 0.768627, 1 )
polygon = PoolVector2Array( 26.7766, 38.5885, 39.949, 38.976, 38.7867, 47.8867, 26.0017, 47.3055 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D3" type="Polygon2D" parent="PickUpItem"]
color = Color( 1, 0, 0.580392, 1 )
polygon = PoolVector2Array( 31.0382, 33.9395, 32.9753, 38.3948, 32.9753, 42.0753, 26.5829, 41.6879, 26.1954, 44.2062, 31.4257, 44.2062, 30.6508, 47.6929, 33.5565, 47.6929, 33.5565, 43.8187, 39.1741, 44.5936, 39.1741, 42.269, 35.1062, 41.4942, 35.881, 38.0074, 41.6924, 35.2954, 38.9804, 31.8086, 35.881, 37.2325, 36.4622, 30.2589, 34.1376, 31.2275, 34.1376, 36.4577 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D4" type="Polygon2D" parent="PickUpItem"]
color = Color( 0.12549, 0, 0.780392, 1 )
polygon = PoolVector2Array( 48.2786, 50.9861, 48.2786, 35.1017, 42.4672, 35.6829, 51.1842, 16.5054, 57.7704, 35.8766, 52.1528, 35.2954, 52.5402, 51.9546 )
__meta__ = {
"_edit_lock_": true
}

[node name="Class" type="ColorRect" parent="."]
margin_left = 476.0
margin_right = 540.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 1, 1, 0.466667 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Class"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 19.602, 36.6514, 46.7216, 36.4577, 46.5279, 40.9131, 33.5492, 40.1382, 32.9681, 52.7294, 41.104, 52.5358, 40.9103, 58.1534, 21.7328, 58.5408, 21.7328, 52.342, 29.0939, 52.342, 29.2876, 39.7508, 19.0209, 39.7508 )

[node name="Polygon2D2" type="Polygon2D" parent="Class"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 6.42963, 47.1118, 14.9529, 47.6929, 15.1466, 60.2842, 6.04218, 59.8968 )

[node name="Polygon2D3" type="Polygon2D" parent="Class"]
color = Color( 0.12549, 0.278431, 0.678431, 1 )
polygon = PoolVector2Array( 16.5026, 59.1219, 15.9215, 45.5621, 7.78558, 45.5621, 6.42963, 31.2275, 9.72272, 27.9344, 9.91641, 24.2538, 6.42963, 22.123, 6.42963, 17.0865, 10.3038, 12.4374, 14.1781, 12.8249, 16.89, 16.5054, 16.89, 23.6727, 13.0158, 24.835, 13.0158, 27.1595, 14.9529, 30.0652, 29.4813, 30.2589, 29.4813, 33.7457, 15.7278, 33.552, 14.1781, 38.3948, 14.7592, 41.1068, 20.3768, 43.0439, 20.3768, 57.9597 )

[node name="Polygon2D4" type="Polygon2D" parent="Class"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 29.8687, 7.59467, 30.0624, 22.7042, 42.46, 14.3746 )

[node name="Polygon2D5" type="Polygon2D" parent="Class"]
position = Vector2( 12.785, 0 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 29.8687, 7.59467, 30.0624, 22.7042, 42.46, 14.3746 )

